centreon/www/Themes/Generic-theme/style.css
/* ... */
.broker_stats.stats_lv2  p.title:hover {
    background-color: var(--broker-stats-lv2-title-hover-background-color);
}

.broker_stats p.title {
    cursor: pointer;
    padding: 6px;
    background-color: var(--broker-stats-title-background-color);
    border-bottom: 1px solid var(--broker-stats-title-border-bottom-color);
    border-top: 1px solid var(--broker-stats-title-border-top-color);
}

.broker_stats  p.title:hover {
    background-color: var(--broker-stats-title-hover-background-color);
}

.expand {
    cursor: pointer;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 6px 6px;
    border-color: transparent transparent var(--expand-border-color) transparent;
    transition: transform 0.2s;
    float: left;
    margin-right: 5px;
    margin-top: 5px;
}

.expand-icon {
    transform: rotate(-45deg);
}

.broker_stats ul.module_list {
    margin: 3px;
}

.broker_stats ul.peers {
    margin-left: 153px;
}

.broker_stats ul.filters {
    margin-left: 153px;
}

.broker_stats ul li {
    list-style: none;
}

.broker_stats .info_name {
    float: left;
    color: var(--broker-stats-info-name-font-color);
    font-weight: 600;
}

.broker_stats .info_value {
    float: right;
    width: 80%;
}

.broker_stats .module_status {
    float: right;
    padding: 0 6px;
}

.broker_stats .loaded {
    color: var(--broker-stats-loaded-font-color);
}

/* Generation page */
.consoleSteps {
    width: 15%;
}

#progress_bar {
    width: 120px;
    height: 12px;
}

.ui-progressbar-value {
    background-color: var(--ui-progress-bar-value-background-color) !important
}

.section-expand {
    height: 95%;
    margin-bottom: 20px;
}

/* Inline checkbox */
.checkbox-inline {
    display: inline-block;
    white-space: nowrap;
    margin-right: 10px;
}

#installationContent .accordion {
    background-color: var(--installation-content-accordion-background-color);
    color: var(--installation-content-accordion-font-color);
    cursor: pointer;
    padding: 5px;
    text-align: left;
    border: none;
    outline: none;
    transition: 0.4s;
}

#contentwrapper div.section {
    padding: 0 10px;
}

#contentwrapper > div:not(:nth-child(2)) div.section {
    display: none;
    padding: 0 10px;
    background-color: var(--content-wrapper-not-2nth-child-section-background-color);
    overflow: hidden;
}

.accordion h1:hover {
    background-color: var(--accordion-hover-background-color);
    cursor: pointer;
}

.portlet-header {
    height: 14px;
}

.portlet-header input {
    padding-bottom: 0;
    padding-top: 0;
    border: 0;
    background-color: var(--portlet-header-input-background-color);
    width: auto;
    line-height: 13px;
}

.portlet-header form {
    padding: 0;
    margin: 0;
    line-height: 14px;
}

/* configuration pollers action buttons */
.ui-icon-white {
    background-image: url("./jquery-ui/images/ui-icons_ffffff_256x240.png") !important;
}

.bt-poller-action{
    line-height: 20px;
    font-size: 13.3333px;
    margin: 4px 16px 0px 0px !important;
}

.bt-poller-action:disabled {
    background: var(--bt-poller-action-disabled-background-color) !important;
    cursor: not-allowed;
}
.add-new-entry {
    cursor: pointer;
    color: var(--bt-success-background-color);
}

.gorgone_config_file {
    padding: 4px;
    color: var(--gorgone-config-file-font-color);
    background-color: var(--gorgone-config-file-background-color);
}

/* utilities */
.ml-1 {
    margin-left: 8px;
}
.ml-2 {
    margin-left: 16px;
}
.mr-1 {
    margin-right: 8px;
}
.fs-0 {
    font-size: 0;
}

/* license manager error pages style */
.notAuthorizedContainer {
    -webkit-box-align: center;
    place-items: center;
    display: grid;
    grid-template-rows: 2fr 3fr 2fr;
    height: calc(100vh - 39px);
    position: relative;
    width: 100%;

}

.logoSection {
    align-self: flex-end;
    height: 88px;
    width: 29rem;
}

.messageBlockSection {
    place-content: center;
    align-self: flex-start;
    display: flex;
    flex-direction: column;
    gap: 24px;
    -webkit-box-pack: center;
    max-width: 40%;
    overflow: visible;
    text-align: center;
}

.messageHeader {
    margin: 0px;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    font-size: 4rem;
    line-height: 1;
    letter-spacing: 0em;
    color: var(--license-manager-error-message-color);
    font-weight: 700;
}

.firstMessage {
    margin: 0px;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    font-weight: 400;
    font-size: 2rem;
    line-height: 1.5;
    letter-spacing: 0em;
    color: var(--badge-color);
}

.secondMessage {
    margin: 0px;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    font-weight: 500;
    font-size: 1.7rem;
    line-height: 1.6;
    letter-spacing: 0.0075em;
    color: var(--badge-color);
}

.backgroundImage {
    height: 100%;
    position: absolute;
    width: 100%;
}

